<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meditate</string>

    <!-- DEFAULT VALUES -->
    <string name="default_delay" translatable="false">30000</string>
    <string name="default_theme" translatable="false">3</string> <!-- MODE_NIGHT_AUTO_BATTERY -->
    <string name="default_widget_color" translatable="false">#ffffff</string>

    <!-- KEYS -->
    <string name="key_last_session" translatable="false">key_last_session</string>
    <string name="key_session_delay" translatable="false">key_session_delay</string>
    <string name="key_session_length" translatable="false">key_session_length</string>
    <string name="key_streak_expires" translatable="false">key_streak_expires</string>
    <string name="key_streak_longest" translatable="false">key_streak_longest</string>
    <string name="key_streak_value" translatable="false">key_streak_value</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="key_widget_color" translatable="false">key_widget_color</string>

    <string name="empty" translatable="false" />

    <!-- NAVBAR -->
    <string name="settings">Settings</string>
    <string name="session">Session</string>
    <string name="progress">Progress</string>

    <!-- NOTIFICATION -->
    <string name="notification_channel_id" translatable="false">meditate_channel</string>
    <string name="notification_channel_name">Meditate</string>
    <string name="notification_message">Session ended</string>
    <string name="notification_title">Meditate</string>

    <!-- PLURALS -->
    <plurals name="days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <plurals name="days_of_meditation">
        <item quantity="one">%d day of meditation</item>
        <item quantity="other">%d days of meditation</item>
    </plurals>

    <!-- PROGRESS -->
    <string name="count_sessions">Total sessions</string>
    <string name="duration_average">Average duration</string>
    <string name="duration_longest">Longest duration</string>
    <string name="duration_total">Total time spent meditating</string>
    <string name="last_session">Last session</string>
    <string name="streak_longest">Longest streak</string>

    <!-- SETTINGS -->
    <string name="delay">Delay</string>
    <string name="delay_none">None</string>
    <string name="delay_15">15 Seconds</string>
    <string name="delay_30">30 Seconds</string>
    <string name="delay_45">45 Seconds</string>

    <string name="theme">Theme</string>

    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="set_by_battery_saver">Set by Battery Saver</string>

    <string name="widget_text_color">Widget text color</string>

    <string name="color_white">White</string>
    <string name="color_light_grey">Light grey</string>
    <string name="color_dark_grey">Dark grey</string>
    <string name="color_black">Black</string>

    <!-- SESSION -->
    <string name="minus" translatable="false">-</string>
    <string name="meditate">Meditate</string>
    <string name="plus" translatable="false">+</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="end">End</string>

    <string name="discard">Discard</string>
    <string name="discard_or_save_question">Discard or save session?</string>
    <string name="save">Save</string>

    <string name="concentrate">Concentrate on your breath</string>

    <!-- WIDGET -->
    <string name="widget_description">This widget asks if you have time to meditate or displays your current meditation streak</string>
    <string name="widget_text_default">Time to meditate?</string>

</resources>


