<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_session">

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.gitlab.j_m_hoffmann.meditate.ui.settings.SettingsFragment"
        android:label="@string/settings" />

    <fragment
        android:id="@+id/navigation_session"
        android:name="com.gitlab.j_m_hoffmann.meditate.ui.session.SessionFragment"
        android:label="@string/session"
        tools:layout="@layout/session_fragment" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="com.gitlab.j_m_hoffmann.meditate.ui.progress.ProgressFragment"
        android:label="@string/progress"
        tools:layout="@layout/progress_fragment" />
</navigation>